# estat-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
sample/: meta_test_local_finance_expenditure_and_revenue_breakdown.csv  test_local_finance_expenditure_and_revenue_breakdown.csv
src/estat_downloader/: __init__.py  api.py  cli.py
src/estat_downloader/core/: __init__.py  downloader.py  metadata_downloader.py  validators.py
src/estat_scraper/: __init__.py
tests/: conftest.py  test_downloader.py  test_validators.py
