[project]
name = "estat-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "K-Oxon", email = "ko1011qfp@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["beautifulsoup4>=4.12.3", "lxml>=5.3.0"]

[project.scripts]
# estat-scraper = "estat_scraper.cli:main"
estat-scraper = "estat_scraper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["mypy>=1.12.0", "pytest>=8.3.3", "ruff>=0.6.9"]
