[project]
name = "estat-downloader"
version = "0.1.2"
description = "A CLI tool for downloading statistical data from e-Stat"
readme = "README.md"
authors = [{ name = "K-Oxon", email = "ko1011qfp@gmail.com" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chardet>=5.2.0",
    "httpx>=0.27.2",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "rich>=13.9.3",
    "typer>=0.12.5",
]

[project.scripts]
estat-downloader = "estat_downloader.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["mypy>=1.12.0", "pytest>=8.3.3", "ruff>=0.6.9"]
